--- a/qip/css/main.css
+++ b/qip/css/main.css
@@ -1275,3 +1275,12 @@ ul#archive li span a:hover {
         width: 100%;
     }
 }
+
+.h2-header{
+	margin-top: 30px;
+	letter-spacing: -1px;
+	line-height: 1;
+	font-family: 'Titillium Web', sans-serif;
+	color: #500516; 
+	
+}
